--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="http://philezemonye.github.io/css/styles.css">
 #tribute-title {
   font-family: Helvetica;
   font-sytle: Normal;
